# project-augustus

./: .gitignore  AGENTS.md  API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  Api.md  CMakeLists.txt  CODEBASE_INDEX.md  Config.toml  Doxyfile  README.md  ROADMAP.md  TEST_REPORT.md  TODO.md  UI_PLAN.md  build.sh  imgui.ini
config/: AIConfig.toml  Config.toml
data/core/: mod.json
data/core/data/: consumption_pipelines.json  economy.json  factories.json  items.json  pipelines.json  trade_nodes.json
data/core/data/categories/: factory_categories.json  item_categories.json  pipeline_categories.json  tech_categories.json
data/core/data/common/: categories.json  companies.json  company_profiles.json  factories.json  items.json  pipelines.json  technologies.json  trade_nodes.json
data/core/data/conditions/: conditions.json
data/core/data/economy/: settings.json
data/core/data/map/: markets.json
data/core/data/scenarios/: debug_scenario.json
data/core/data/technologies/: production_techs.json
data/core/locales/en/: namespaces.json
data/saves/: headless_test_save.save
docs/: ANALYTICS_API.md  MARKET_API.md  MARKET_DEBUG_API.md  README-tr.md
examples/static_library_demo/: CMakeLists.txt  main.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BuildFactoryDialog.tsx  CompanyView.tsx  ConsoleView.tsx  Dashboard.tsx  EventView.tsx  EventsPopup.tsx  Layout.tsx  LoadGame.tsx  MainMenu.tsx  MarketView.tsx  ModBrowser.tsx  SaveDialog.tsx  ScenarioSelect.tsx  Select.tsx  TradeNodeView.tsx
frontend/src/engine/: EngineBridge.ts
frontend/src/store/: engineStore.ts
frontend/src/types/: engine.ts
godot/augustus-game/: BudgetPanel.tscn  Console.tscn  GameManager.gd  GameManager.gd.uid  InventoryPanel.tscn  LocalizationManager.gd  LocalizationManager.gd.uid  MainScene.tscn  MainTheme.tres  ManpowerScene.tscn  Map.tscn  MarketScene.tscn  NodeDetailsPanel.tscn  PerksScene.tscn  RegistryManager.gd  RegistryManager.gd.uid  TechScene.tscn  TimeControls.tscn  TopBar.tscn  TradeNode.tscn  budget_panel.gd  budget_panel.gd.uid  camera.gd  camera.gd.uid  console.gd  console.gd.uid  icon.svg.import  inventory_panel.gd  inventory_panel.gd.uid  main_scene.gd  main_scene.gd.uid  manpower_scene.gd  manpower_scene.gd.uid  map.gd  map.gd.uid  node_details_panel.gd  node_details_panel.gd.uid  perks_scene.gd  perks_scene.gd.uid  project.godot  (+10 more)
godot/augustus-game/Assets/: MockBackground.png.import
godot/augustus-game/addons/project-augustus/: project-augustus.gdextension  project-augustus.gdextension.uid
godot/augustus-game/core/: mod.json
legacy/: Company.h  Factory.cpp  Factory.h  Market.cpp  TradeNode.h
metadata/: metadata.json
mock/: load_order.json
mock/core/data/common/: companies.json  events.json  factories.json  items.json  perks.json  pipelines.json  trade_nodes.json
mock/core/data/map/: .markets.json.kate-swp  markets.json
mock/core/data/scenarios/: debug_scenario.json
src/: main.cpp
src/AI/: AIBrain.cpp  AIBrain.h  AIManager.cpp  AIManager.h  AIRegistry.cpp  AIRegistry.h  CompanyBrain.cpp  CompanyBrain.h  TradeNodeBrain.cpp  TradeNodeBrain.h
src/AI/AIUtils/: AIPicker.h
src/AI/Components/: AIControllerComponent.h
src/AI/Evaluators/: EconomyEvaluator.cpp  EconomyEvaluator.h
src/AI/Logic/: CompanyLogic.h  TradeNodeLogic.h
src/Analytics/: EconomyStats.cpp  EconomyStats.h
src/Api/: EngineController.cpp  EngineController.h  NativeApi.cpp  NativeApi.h  WebApi.cpp
src/App/: FileLoader.cpp  FileLoader.h  ModLoader.cpp  ModLoader.h  main.cpp
src/App/UI/: UIManager.cpp  UIManager.h
src/App/UI/Panels/: CompanyInfoPanel.cpp  CompanyInfoPanel.h  ConsolePanel.cpp  ConsolePanel.h  GameControls.cpp  GameControls.h  InventoryPanel.cpp  InventoryPanel.h  ManagerPanel.cpp  ManagerPanel.h  MarketPanel.cpp  MarketPanel.h
src/App/UI/Popups/: EventPopup.h
src/App/UI/Widgets/: InputBar.cpp  InputBar.h  MarketDropdown.cpp  MarketDropdown.h
src/App/UI/Windows/: CompanyInfoWindow.cpp  CompanyInfoWindow.h  ConsoleWindow.cpp  ConsoleWindow.h  GameControlsWindow.cpp  MarketWindow.h  (+4 more)
src/Core/: Constants.h  Enums.h  GameConstants.h  Inventory.h  ModifierKeys.h  Types.h
src/Core/Components/: InventoryComponent.h
src/Core/ECS/: Component.h  Entity.cpp  Entity.h
src/Debug/: MarketDebug.cpp  MarketDebug.h
src/DevTools/: ConfigUtils.cpp  ConfigUtils.h  Console.cpp  Console.h  ConsoleUtils.cpp  ConsoleUtils.h
src/Economy/: Company.cpp  Company.h  EconomyUtils.cpp  EconomyUtils.h  Factory.cpp  Factory.h  Orderbook.h  Pipeline.cpp  Pipeline.h  Templates.h  TradeUtils.cpp  TradeUtils.h
src/Economy/Components/: AssetOwnerComponent.h  ManpowerPoolComponent.h  OwnerComponent.h  PerkComponent.h  ProductionComponent.h  TechTreeComponent.h  WalletComponent.h  WorkforceComponent.h
src/Game/: EntityManager.cpp  EntityManager.h  EventHandler.cpp  EventHandler.h  GameApi.cpp  GameManager.cpp  GameManager.h  Gamestate.cpp  Gamestate.h  IdUtils.h  InputHandler.cpp  InputHandler.h
src/Game/Entity/: EntityCompany.h  EntityFactory.h  EntityMarket.h  EntityTradeNode.h
src/Godot/: GodotAugustus.cpp  GodotAugustus.h  gdextension.cpp
src/IO/: FileUtils.cpp  FileUtils.h  SaveUtils.cpp  SaveUtils.h
src/Math/: ReLU.h  Sigmoid.h  Softmax.h
src/Math/Types/: real.h  real_t.h  udouble.h  ufloat.h
src/Registry/: CompanyManager.h  CompanyProfileManager.h  ConditionManager.h  EconomyManager.h  EventManager.h  FactoryManager.h  GameLoader.h  ItemManager.h  MapManager.h  MarketManager.h  NameManager.h  PerkManager.h  PipelineManager.h  ScenarioManager.h  TechnologyManager.h  TradeNodeManager.h
src/World/: Map.cpp  Map.h  Market.cpp  Market.h  TerrainGenerator.h  TradeNode.cpp  TradeNode.h
src/World/Components/: DemographicsComponent.h  LocationComponent.h  MarketComponent.h  MarketMemberComponent.h
src/World/Systems/: MarketSystem.cpp  MarketSystem.h
src/frontend/: index.html
src/legacy/: TradeNode.cpp
suggestions/: muhtemel_sorunlar.md
test/: sidebar.cpp
tests/: headless_test.cpp
(+17 files in other folders)
